// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should show total for single expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $1.95
    .
  </h1>
</div>
`;

exports[`should show total of multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    $1,141.95
    .
  </h1>
</div>
`;
